[AKF] - Update .sln and .csproj

--- a/Pages/CustomPage.razor
+++ b/Pages/CustomPage.razor
@@ -4,7 +4,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Curriculum Vitae</title>
+    <title>Associação de Karate de Felgueiras</title>
     <link href="../wwwroot/css/bootstrap/bootstrap.min.css" rel="stylesheet" >
     <style>
         
