[AKF] - Add base html and images

--- a/Templates/akaratefelgueiras.html
+++ b/Templates/akaratefelgueiras.html
@@ -4,7 +4,7 @@
 <head><!-- base href="https://akaratefelgueiras.my.canva.site/" -->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vermelho preto fitness dinâmico neons site fitness</title>
+  <title>Associacao de Karate de Felgueiras</title>
   <meta name="description" content="Página web da Associação de Karaté de Felgueiras">
   <link rel="icon" href="https://akaratefelgueiras.my.canva.site/26387fa4f5b1e3f7b6217b27d79bf264.png" type="image/png"
     sizes="16x16">
