[AKF] Update template

--- a/Pages/CustomPage.razor
+++ b/Pages/CustomPage.razor
@@ -73,6 +73,7 @@
       -webkit-touch-callout: none;
     }
 
+    @* FONTS *@
     @* @@font-face {
       font-family: YACgEcnJpjs-0;
       src: url(fonts/99ddc70a8ffa326837e6983f9aed0872.woff2);
