--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+﻿<nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#home" style="font-family:system-ui; font-weight: bolder; font-size: medium;">Associação de Karaté de Felgueiras</a>
         <button class="navbar-toggler ml-auto @NavButtonCssClass" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -8,32 +8,32 @@
         <div class="collapse navbar-collapse @NavBarCssClass" id="navbarCollapse" @onclick="ToggleNavMenu">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="#missao-valores" onclick="document.getElementById('missao-valores')">
+                    <NavLink class="nav-link" href="#missao-valores" Match="NavLinkMatch.All">
                         <span aria-hidden="true"></span> Missão e valores
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="#a-historia">
+                    <NavLink class="nav-link" href="#a-historia"  Match="NavLinkMatch.All">
                         <span aria-hidden="true"></span> História
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="#horarios-locais">
+                    <NavLink class="nav-link" href="#horarios-locais"  Match="NavLinkMatch.All">
                         <span aria-hidden="true"></span> Horários
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="#saiba-mais">
+                    <NavLink class="nav-link" href="#saiba-mais"  Match="NavLinkMatch.All">
                         <span aria-hidden="true"></span> Saiba mais
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="#parceiros">
+                    <NavLink class="nav-link" href="#parceiros"  Match="NavLinkMatch.All">
                         <span aria-hidden="true"></span> Parceiros
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="#contacto">
+                    <NavLink class="nav-link" href="#contacto"  Match="NavLinkMatch.All">
                         <span aria-hidden="true"></span> Contactos
                     </NavLink>
                 </li>
