--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -9,17 +9,17 @@ h1:focus {
 }
 
 a, .btn-link {
-    color: #089288;
+    color: #e20014;
 }
 
 .btn-primary {
     color: #fff;
-    background-color: #089288;
-    border-color: #089288;
+    background-color: #e20014;
+    border-color: #e20014;
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #089288;
+  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #e20014;
 }
 
 .content {
@@ -84,7 +84,7 @@ a, .btn-link {
     }
 
         .loading-progress circle:last-child {
-            stroke: #089288;
+            stroke: #e20014;
             stroke-dasharray: calc(3.141 * var(--blazor-load-percentage, 0%) * 0.8), 500%;
             transition: stroke-dasharray 0.05s ease-in-out;
         }
