[AKF] Update webpage, adjust schedules, add links for blog, update navbar

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -8,35 +8,45 @@
         <div class="collapse navbar-collapse @NavBarCssClass" id="navbarCollapse" @onclick="ToggleNavMenu">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/" Match="NavLinkMatch.All">
+                        Notícias
+                    </NavLink>
+                </li>
+                <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-in%C3%ADcio-de-%C3%A9poca-akf-4df2b013fa21"  Match="NavLinkMatch.All">
+                        Eventos
+                    </NavLink>
+                </li>
+                @* <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="#missao-valores" Match="NavLinkMatch.All">
-                        <span aria-hidden="true"></span> Missão e valores
+                        Missão e valores
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="#a-historia"  Match="NavLinkMatch.All">
-                        <span aria-hidden="true"></span> História
+                        História
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="#horarios-locais"  Match="NavLinkMatch.All">
-                        <span aria-hidden="true"></span> Horários
+                        Horários
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="#saiba-mais"  Match="NavLinkMatch.All">
-                        <span aria-hidden="true"></span> Saiba mais
+                        Saiba mais
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="#parceiros"  Match="NavLinkMatch.All">
-                        <span aria-hidden="true"></span> Parceiros
+                        Parceiros
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="#contacto"  Match="NavLinkMatch.All">
-                        <span aria-hidden="true"></span> Contactos
+                        Contactos
                     </NavLink>
-                </li>
+                </li> *@
             </ul>
         </div>
     </div>
