--- a/App.razor
+++ b/App.razor
@@ -6,7 +6,7 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(CustomLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Pedimos desculpa, mas não há nada neste endereço.</p>
         </LayoutView>
     </NotFound>
 </Router>
