[AKF] remove ../ from image sourcing

--- a/Pages/CustomPage.razor
+++ b/Pages/CustomPage.razor
@@ -6025,7 +6025,7 @@
                   style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                   <div id="jQxPsGt31qg9Y8Cp"
                     style="transform: rotate(0deg); top: 0%; left: 0%; width: 100%; position: absolute; height: 100%; opacity: 1;">
-                    <img src="../akaratefelgueiras/5cdc80c184087119d255cf9f629e95e8.webp" loading="lazy"
+                    <img src="/akaratefelgueiras/5cdc80c184087119d255cf9f629e95e8.webp" loading="lazy"
                       style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                 </div>
               </div>
@@ -6042,8 +6042,8 @@
                       style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                       <div id="RcQrFCTompv043nZ"
                         style="transform: rotate(0deg); top: -18.3943%; left: 0%; width: 117.824%; position: absolute; height: 158.789%; opacity: 1;">
-                        <img src="../akaratefelgueiras/d2d9fca1d86d3b22425d4c58a58d674d.jpg" loading="lazy"
-                          srcset="../akaratefelgueiras/e161bbf4f05e189caf839f9e901ae17a.jpg 807w, ../akaratefelgueiras/d2d9fca1d86d3b22425d4c58a58d674d.jpg 1613w"
+                        <img src="/akaratefelgueiras/d2d9fca1d86d3b22425d4c58a58d674d.jpg" loading="lazy"
+                          srcset="/akaratefelgueiras/e161bbf4f05e189caf839f9e901ae17a.jpg 807w, ../akaratefelgueiras/d2d9fca1d86d3b22425d4c58a58d674d.jpg 1613w"
                           sizes="(max-width: 375px) 90.55434038vw, (min-width: 375.05px) and (max-width: 480px) 92.40238815vw, (min-width: 480.05px) and (max-width: 768px) 90.7523455vw, (min-width: 768.05px) and (max-width: 1024px) 92.81489881vw, (min-width: 1024.05px) 86.63996528vw"
                           style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                     </div>
@@ -6059,7 +6059,7 @@
                       style="transform:scale(-1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                       <div id="mgtWJPxh2s0TRz8N"
                         style="transform: rotate(0deg); top: 0%; left: 0%; width: 100%; position: absolute; height: 100%; opacity: 1;">
-                        <img src="../akaratefelgueiras/91c788e0f2968b0324782ff61984cb76.svg"
+                        <img src="/akaratefelgueiras/91c788e0f2968b0324782ff61984cb76.svg"
                           alt="Gradient that fades to transparency" loading="lazy"
                           style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                     </div>
@@ -6075,7 +6075,7 @@
                       style="transform:scale(-1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                       <div id="mpPZg9vWjPa2vHBm"
                         style="transform: rotate(0deg); top: 0%; left: 0%; width: 100%; position: absolute; height: 100%; opacity: 1;">
-                        <img src="../akaratefelgueiras/6ba5226e0533b8b1b3f59ceeba15c4c8.svg"
+                        <img src="/akaratefelgueiras/6ba5226e0533b8b1b3f59ceeba15c4c8.svg"
                           alt="Gradient that fades to transparency" loading="lazy"
                           style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                     </div>
@@ -6205,7 +6205,7 @@
                             data-imagebox-height="61.31027953" data-imagebox-top="0" data-imagebox-left="0"
                             data-imagebox-rotation="-180"
                             style="transform: rotate(-180deg); top: -0.000937224px; left: 3.55271e-15px; width: 33.5667px; position: absolute; height: 18.2519px; opacity: 1;">
-                            <img src="../akaratefelgueiras/2dc493e0a801ee5194a44420e7a2f164.svg"
+                            <img src="/akaratefelgueiras/2dc493e0a801ee5194a44420e7a2f164.svg"
                               alt="White Arrow Right Element" loading="lazy"
                               style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                         </div>
@@ -6232,8 +6232,8 @@
                           style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                           <div id="V5gKFVOgcBQvi5rz"
                             style="transform: rotate(0deg); top: -20.5416%; left: -6.64167%; width: 110.36%; position: absolute; height: 120.542%; opacity: 1;">
-                            <img src="../akaratefelgueiras/91fe4618ee42ca7c857aa17245af8834.jpg" loading="lazy"
-                              srcset="../akaratefelgueiras/98c912127462378f863148f592d842ab.jpg 410w, ../akaratefelgueiras/91fe4618ee42ca7c857aa17245af8834.jpg 820w"
+                            <img src="/akaratefelgueiras/91fe4618ee42ca7c857aa17245af8834.jpg" loading="lazy"
+                              srcset="/akaratefelgueiras/98c912127462378f863148f592d842ab.jpg 410w, ../akaratefelgueiras/91fe4618ee42ca7c857aa17245af8834.jpg 820w"
                               sizes="(max-width: 375px) 33.02905785vw, (min-width: 375.05px) and (max-width: 480px) 34.98840874vw, (min-width: 480.05px) and (max-width: 768px) 34.98840874vw, (min-width: 768.05px) and (max-width: 1024px) 36.73782918vw, (min-width: 1024.05px) 41.8631444vw"
                               style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                         </div>
@@ -6399,8 +6399,8 @@
                   style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                   <div id="r2lsgIajJd0KpCLw"
                     style="transform: rotate(0deg); top: 0%; left: -8.19991%; width: 116.4%; position: absolute; height: 100%; opacity: 1;">
-                    <img src="../akaratefelgueiras/d4b1ae05e7965609cea6a1edfbe62e69.webp" loading="lazy"
-                      srcset="../akaratefelgueiras/d4b1ae05e7965609cea6a1edfbe62e69.webp 509w, ../akaratefelgueiras/d4b1ae05e7965609cea6a1edfbe62e69.webp 1018w"
+                    <img src="/akaratefelgueiras/d4b1ae05e7965609cea6a1edfbe62e69.webp" loading="lazy"
+                      srcset="/akaratefelgueiras/d4b1ae05e7965609cea6a1edfbe62e69.webp 509w, ../akaratefelgueiras/d4b1ae05e7965609cea6a1edfbe62e69.webp 1018w"
                       sizes="(max-width: 375px) 71.71597855vw, (min-width: 375.05px) and (max-width: 480px) 73.17956995vw, (min-width: 480.05px) and (max-width: 768px) 71.87279191vw, (min-width: 768.05px) and (max-width: 1024px) 73.50626446vw, (min-width: 1024.05px) 78.40668209vw"
                       style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                 </div>
@@ -6418,8 +6418,8 @@
                       style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                       <div id="Cu06oCqrv5CES8qE"
                         style="transform: rotate(0deg); top: 0%; left: -15.8531%; width: 131.706%; position: absolute; height: 100%; opacity: 1;">
-                        <img src="../akaratefelgueiras/82a895dede0e574a39843ccf8d1bae2c.jpg" loading="lazy"
-                          srcset="../akaratefelgueiras/79717934caf58111364b93f4960bff72.webp 1200w, ../akaratefelgueiras/82a895dede0e574a39843ccf8d1bae2c.jpg 1799w"
+                        <img src="/akaratefelgueiras/82a895dede0e574a39843ccf8d1bae2c.jpg" loading="lazy"
+                          srcset="/akaratefelgueiras/79717934caf58111364b93f4960bff72.webp 1200w, ../akaratefelgueiras/82a895dede0e574a39843ccf8d1bae2c.jpg 1799w"
                           sizes="(max-width: 375px) 56.54304583vw, (min-width: 375.05px) and (max-width: 480px) 57.69698554vw, (min-width: 480.05px) and (max-width: 768px) 56.66668222vw, (min-width: 768.05px) and (max-width: 1024px) 57.95456137vw, (min-width: 1024.05px) 61.81819879vw"
                           style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                     </div>
@@ -6742,7 +6742,7 @@
                       <div id="ejUIym7zLfzNKlP4"
                         style="width: 100%; height: 100%; top: 0%; left: 0%; transform: rotate(0deg); position: absolute; opacity: 1; animation: 0s ease 0s 1 normal none running none;">
                         <img
-                          src="../akaratefelgueiras/4c47014fa82eac20af853cdd9c4000f0.png"
+                          src="/akaratefelgueiras/4c47014fa82eac20af853cdd9c4000f0.png"
                           loading="lazy" style="width:100%;height:100%;display:block;object-fit:cover;"></div>
                     </div>
                   </div>
@@ -6758,7 +6758,7 @@
                       <div id="wGyfDdvASjkpSmuN"
                         style="width: 100%; height: 100%; top: 0%; left: 0%; transform: rotate(0deg); position: absolute; opacity: 1; animation: 0s ease 0s 1 normal none running none;">
                         <img
-                          src="../akaratefelgueiras/20f2d6b51af1d3f9b778607ec44e986e.png"
+                          src="/akaratefelgueiras/20f2d6b51af1d3f9b778607ec44e986e.png"
                           loading="lazy" style="width:100%;height:100%;display:block;object-fit:cover;"></div>
                     </div>
                   </div>
@@ -6774,7 +6774,7 @@
                       <div id="g0iunNI0LzWx7bR2"
                         style="width: 100%; height: 100%; top: 0%; left: 0%; transform: rotate(0deg); position: absolute; opacity: 1; animation: 0s ease 0s 1 normal none running none;">
                         <img
-                          src="../akaratefelgueiras/62cd82cda2a48a75f32f866c0d398a48.png"
+                          src="/akaratefelgueiras/62cd82cda2a48a75f32f866c0d398a48.png"
                           loading="lazy" style="width:100%;height:100%;display:block;object-fit:cover;"></div>
                     </div>
                   </div>
@@ -6790,7 +6790,7 @@
                       <div id="XrYJzyAaJzBFSoZq"
                         style="width: 100%; height: 100%; top: 0%; left: 0%; transform: rotate(0deg); position: absolute; opacity: 1; animation: 0s ease 0s 1 normal none running none;">
                         <img
-                          src="../akaratefelgueiras/e29c4648041d6430fb7374098ecb92a0.png"
+                          src="/akaratefelgueiras/e29c4648041d6430fb7374098ecb92a0.png"
                           loading="lazy" style="width:100%;height:100%;display:block;object-fit:cover;"></div>
                     </div>
                   </div>
@@ -6806,9 +6806,9 @@
                       <div id="Yw6jTre4ZEXF0AHO"
                         style="width: 100%; height: 100%; top: 0%; left: 0%; transform: rotate(0deg); position: absolute; opacity: 1; animation: 0s ease 0s 1 normal none running none;">
                         <img
-                          src="../akaratefelgueiras/953704569063fc59c9908e432ebf8208.png"
+                          src="/akaratefelgueiras/953704569063fc59c9908e432ebf8208.png"
                           loading="lazy"
-                          srcset="../akaratefelgueiras/21574107d123c385b6b22854c4ddacda.png 152w, ../akaratefelgueiras/953704569063fc59c9908e432ebf8208.png 228w"
+                          srcset="/akaratefelgueiras/21574107d123c385b6b22854c4ddacda.png 152w, ../akaratefelgueiras/953704569063fc59c9908e432ebf8208.png 228w"
                           sizes="(max-width: 375px) 20.48763714vw, (min-width: 375.05px) and (max-width: 480px) 16.00596652vw, (min-width: 480.05px) and (max-width: 768px) 10.00372907vw, (min-width: 768.05px) and (max-width: 1024px) 7.5027968vw, (min-width: 1024.05px) 5.62435134vw"
                           style="width:100%;height:100%;display:block;object-fit:cover;"></div>
                     </div>
@@ -6854,7 +6854,7 @@
                   style="transform:scale(1, 1);overflow:hidden;width:100%;position:relative;height:100%;">
                   <div id="y6AwZWXvo4VOBiHK"
                     style="transform: rotate(0deg); top: 0%; left: 0%; width: 100%; position: absolute; height: 100%; opacity: 1;">
-                    <img src="../akaratefelgueiras/67a155fec0f0fbe4033b836e703fe251.svg" alt="Illustration of Martial Artist"
+                    <img src="/akaratefelgueiras/67a155fec0f0fbe4033b836e703fe251.svg" alt="Illustration of Martial Artist"
                       loading="lazy" style="display:block;object-fit:cover;width:100%;height:100%;"></div>
                 </div>
               </div>
@@ -7021,8 +7021,8 @@
   <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       <p style="font-family: system-ui; font-weight: bolder;">
-        <img src="../akaratefelgueiras/lcb-soft-devel.png" class="logo" 
-           srcset="../akaratefelgueiras/lcb-soft-devel.png 3280w, ../akaratefelgueiras/lcb-soft-devel.png 6520w"/>
+        <img src="/akaratefelgueiras/lcb-soft-devel.png" class="logo" 
+           srcset="/akaratefelgueiras/lcb-soft-devel.png 3280w, ../akaratefelgueiras/lcb-soft-devel.png 6520w"/>
         © 2023 Copyright: 
         <a class="text-dark" href="https://www.linkedin.com/in/luis-filipe-costa-brochado-62b63bb7/">Associação de Karaté de Felgueiras / Luis Costa Brochado</a>
       </p>
