--- a/Pages/CustomPage.razor
+++ b/Pages/CustomPage.razor
@@ -6535,12 +6535,15 @@
                     <li id="WYkcl1os9N7njvNT"
                       style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;font-family:system-ui;line-height:1.39449074em;">
                       <span id="elUv1pXpMszlb1YQ" style="color:#1f2a47;">Filipe Magalhães (2º Dan)</span></li>
+                    <li id="KiXLJ1Nn8IWHtqoI"
+                      style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;font-family:system-ui;line-height:1.39449074em;">
+                      <span id="TBpeRapMYJRhXUxR" style="color:#1f2a47;">Lara Sousa (1º Dan)</span></li>
                     <li id="EvW1AjJPeWt4AQ9n"
                       style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;font-family:system-ui;line-height:1.39449074em;">
                       <span id="wMjwRic7M4P6yxrx" style="color:#1f2a47;">Luis Brochado (1º Dan)</span></li>
                     <li id="KiXLJ1Nn8IWHtqoI"
                       style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;font-family:system-ui;line-height:1.39449074em;">
-                      <span id="TBpeRapMYJRhXUxR" style="color:#1f2a47;">Lara Sousa (1º Dan)</span></li>
+                      <span id="TBpeRapMYJRhXUxR" style="color:#1f2a47;">Tiago Goucho (1º Dan)</span></li>
                     <li id="wDRxy4LTSBVukgUG"
                       style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;font-family:system-ui;line-height:1.39449074em;">
                       <span id="TXTu9XFsNJK13N79" style="color:#1f2a47;">António Teixeira (1º Dan)</span></li>
@@ -6557,9 +6560,9 @@
                     <li id="DTQcBXbujz1jk8r4"
                       style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;font-family:system-ui;line-height:1.39448449em;">
                       <span id="fUcTrZUJ3ov2Gz2H" style="color:#1f2a47;">Presidente - Márcio Teixeira</span><br></li>
-                    <li id="Oy2D4GA1yCMNWqPj"
+                    @* <li id="Oy2D4GA1yCMNWqPj"
                       style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;font-family:system-ui;line-height:1.39448449em;">
-                      <span id="vx0g5jInsEVZ6AAo" style="color:#1f2a47;">Secretário - Paulo H. Marinho</span></li>
+                      <span id="vx0g5jInsEVZ6AAo" style="color:#1f2a47;">Secretário - Paulo H. Marinho</span></li> *@
                     <li id="krJyZComI7BymZUL"
                       style="margin-left:1.7em;color:#1f2a47;list-style-type:disc;letter-spacing:0em;font-family:system-ui;line-height:1.39448449em;">
                       <span id="ulsBETs9ltDVMbu1" style="color:#1f2a47;">Tesoureiro - Luis Brochado</span><br></li>
