[AKF] Update navmenu and clean technical counsil members.

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -9,12 +9,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/" Match="NavLinkMatch.All">
-                        Notícias
+                        Blogue
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-in%C3%ADcio-de-%C3%A9poca-akf-4df2b013fa21"  Match="NavLinkMatch.All">
-                        Eventos
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-in%C3%ADcio-de-%C3%A9poca-2023-2024-679227c614fd?source=friends_link&sk=3a4a2100b2065adcc03795e8037435ab"  Match="NavLinkMatch.All">
+                        Estágio de inicio de época
                     </NavLink>
                 </li>
             </ul>
