[AKF] Update creator name.

--- a/Pages/CustomPage.razor
+++ b/Pages/CustomPage.razor
@@ -6357,7 +6357,7 @@
                       id="MT2QOpCHIQAgGuRq" style="color:#fafafa;">A A.K.F. é originalmente constituída a </span><span
                       id="xCwArhq5RMa4WHbS" style="color:#fafafa;white-space:pre-wrap;"> </span><span
                       id="EsiVvzAjPKLF2CHf" style="color:#fafafa;">15 de Junho de 1995, por três elementos do então
-                      extinto SKF - Rui Filipe Brochado, José Duarte Pereira e Jozé Luiz Mariño.</span><br></p>
+                      extinto SKF - Rui Filipe Brochado, José Duarte Pereira e José Luiz Mariño.</span><br></p>
                 </div>
               </div>
             </div>
