--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,8 +13,8 @@
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-in%C3%ADcio-de-%C3%A9poca-2023-2024-679227c614fd?source=friends_link&sk=3a4a2100b2065adcc03795e8037435ab"  Match="NavLinkMatch.All">
-                        Estágio de inicio de época
+                    <NavLink class="nav-link" href="https://medium.com/@akaratefelgueiras/registo-do-estágio-de-início-de-época-2023-2024-30a7423cc202"  Match="NavLinkMatch.All">
+                        Estágio de inicio de época - Resumo
                     </NavLink>
                 </li>
             </ul>
