--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="https://medium.com/@akaratefelgueiras/registo-do-estágio-de-início-de-época-2023-2024-30a7423cc202"  Match="NavLinkMatch.All">
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/registo-do-est%C3%A1gio-de-in%C3%ADcio-de-%C3%A9poca-2023-2024-30a7423cc202"  Match="NavLinkMatch.All">
                         Estágio de inicio de época - Resumo
                     </NavLink>
                 </li>
