--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                         Competição - Karaté ShotoOpen
                     </NavLink>
                 </li>
+                <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-outono-jka-p-2023-38c2fbaf8ef2?source=friends_link&sk=ca0844d1d41cfa53e6ecb0e7592c88d7"  Match="NavLinkMatch.All">
+                        Estágio Outono - JKA-P
+                    </NavLink>
+                </li>
             </ul>
         </div>
     </div>
