--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,13 +13,13 @@
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/competi%C3%A7%C3%A3o-karate-shotoopen-4661dbe6643f"  Match="NavLinkMatch.All">
-                        Competição - Karaté ShotoOpen
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/campeonato-nacional-jka-p-novembro-de-2023-0b7a6eb279b5"  Match="NavLinkMatch.All">
+                        Competição - Nacional JKA-Portugal
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-outono-jka-p-2023-38c2fbaf8ef2?source=friends_link&sk=ca0844d1d41cfa53e6ecb0e7592c88d7"  Match="NavLinkMatch.All">
-                        Estágio Outono - JKA-P
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-inverno-uksp-astromil-7e0c02d9a4b2"  Match="NavLinkMatch.All">
+                        Estágio Inverno - UKSP
                     </NavLink>
                 </li>
             </ul>
