--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -13,13 +13,13 @@
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/campeonato-nacional-jka-p-novembro-de-2023-0b7a6eb279b5"  Match="NavLinkMatch.All">
-                        Competição - Nacional JKA-Portugal
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/a-pr%C3%B3xima-%C3%A9poca-desportiva-est%C3%A1-a%C3%AD-8b614e5755c1?source=friends_link&sk=994a9a94ca318c9043e678dc6812675b"  Match="NavLinkMatch.All">
+                        Época 2024/2024
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
-                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/est%C3%A1gio-de-inverno-uksp-astromil-7e0c02d9a4b2"  Match="NavLinkMatch.All">
-                        Estágio Inverno - UKSP
+                    <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/campeonato-europeu-jka-gent-2024-55810592d7c9?source=friends_link&sk=5d27bd2728047d67ce3ea350b8caf2e4"  Match="NavLinkMatch.All">
+                        Europeu JKA Gent - Bélgica
                     </NavLink>
                 </li>
             </ul>
