--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -9,12 +9,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/" Match="NavLinkMatch.All">
-                        Blogue
+                        Blogue | 
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
                     <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/a-pr%C3%B3xima-%C3%A9poca-desportiva-est%C3%A1-a%C3%AD-8b614e5755c1?source=friends_link&sk=994a9a94ca318c9043e678dc6812675b"  Match="NavLinkMatch.All">
-                        Época 2024/2024
+                        Época 24/25 |
                     </NavLink>
                 </li>
                 <li class="nav-item" style="font-family:system-ui; font-weight: bolder; color: black;font-size: medium;">
