--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,4 +1,55 @@
-﻿<nav class="navbar navbar-expand-md navbar-light bg-light">
+﻿<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler @NavButtonCssClass" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-label="Toggle navigation" @onclick="ToggleNavMenu">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse @NavBarCssClass" id="navbarCollapse" @onclick="ToggleNavMenu">
+    <ul class="navbar-nav me-auto">
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/" Match="NavLinkMatch.All">
+                Blogue
+            </NavLink>
+        </li>
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="https://akaratefelgueiras.medium.com/a-pr%C3%B3xima-%C3%A9poca-desportiva-est%C3%A1-a%C3%AD-8b614e5755c1?source=friends_link&sk=994a9a94ca318c9043e678dc6812675b"  Match="NavLinkMatch.All">
+                Época 25/26
+            </NavLink>
+        </li>
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="#missao-valores"  Match="NavLinkMatch.All">
+                Missão e valores
+            </NavLink>
+        </li>
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="#a-historia"  Match="NavLinkMatch.All">
+                História
+            </NavLink>
+        </li>
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="#horarios-locais"  Match="NavLinkMatch.All">
+                Horários & Locais
+            </NavLink>
+        </li>
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="#saiba-mais"  Match="NavLinkMatch.All">
+                Saiba mais
+            </NavLink>
+        </li>
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="#parceiros"  Match="NavLinkMatch.All">
+                Parceiros
+            </NavLink>
+        </li>
+        <li class="nav-item" style="font-family:system-ui; color: black;font-size: medium;">
+            <NavLink class="nav-link" href="#contacto"  Match="NavLinkMatch.All">
+                Contacto
+            </NavLink>
+        </li>
+    </ul>
+  </div>
+</nav>
+
+@* <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#home" style="font-family:system-ui; font-weight: bolder; font-size: medium;">Associação de Karaté de Felgueiras</a>
         <button class="navbar-toggler ml-auto @NavButtonCssClass" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -20,7 +71,7 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> *@
 
 @code {
     private bool collapseNavMenu = true;
