--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -85,3 +85,30 @@ a, .btn-link {
     .loading-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+
+
+.nav-item {
+  text-align: left !important;
+  text-wrap: nowrap !important;
+  padding-top: 1%;
+  padding-left: 5%;
+  font-weight: bold;
+  inline-size: 100%;
+}
+
+.navbar-toggler {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border: 0px !important;
+}
+
+.navbar-toggler-icon {
+  width: 8rem !important;
+  height: 8rem !important;
+}
