[AKF] Update formats for mobile and desktop sections, and fix navbar

--- a/Pages/CustomPage.razor
+++ b/Pages/CustomPage.razor
@@ -509,6 +509,7 @@
       #u8A7lUHfy9kCNWKR {
         position: relative;
         grid-area: 2 / 3 / 3 / 6;
+        margin-bottom: 15rem;
       }
 
       #jUECp2pCZMYFnYJI {
@@ -603,6 +604,7 @@
       #qlrwDKAywdn6jJKV {
         position: relative;
         grid-area: 2 / 4 / 3 / 11;
+        margin-bottom: 15rem;
       }
 
       #Xk2URltwoRlVKIbO {
@@ -1694,6 +1696,7 @@
       #u8A7lUHfy9kCNWKR {
         position: relative;
         grid-area: 2 / 3 / 3 / 6;
+        margin-bottom: 14rem;
       }
 
       #jUECp2pCZMYFnYJI {
@@ -1788,6 +1791,7 @@
       #qlrwDKAywdn6jJKV {
         position: relative;
         grid-area: 2 / 2 / 3 / 15;
+        margin-bottom: 14rem;
       }
 
       #Xk2URltwoRlVKIbO {
@@ -2881,6 +2885,7 @@
       #u8A7lUHfy9kCNWKR {
         position: relative;
         grid-area: 2 / 3 / 3 / 6;
+        margin-bottom: 12rem;
       }
 
       #jUECp2pCZMYFnYJI {
@@ -2975,6 +2980,7 @@
       #qlrwDKAywdn6jJKV {
         position: relative;
         grid-area: 2 / 2 / 3 / 15;
+        margin-bottom: 12rem;
       }
 
       #Xk2URltwoRlVKIbO {
@@ -4068,6 +4074,7 @@
       #u8A7lUHfy9kCNWKR {
         position: relative;
         grid-area: 2 / 3 / 3 / 6;
+        margin-bottom: 10rem;
       }
 
       #jUECp2pCZMYFnYJI {
@@ -4162,6 +4169,7 @@
       #qlrwDKAywdn6jJKV {
         position: relative;
         grid-area: 2 / 2 / 3 / 15;
+        margin-bottom: 12rem;
       }
 
       #Xk2URltwoRlVKIbO {
@@ -5252,6 +5260,7 @@
       #u8A7lUHfy9kCNWKR {
         position: relative;
         grid-area: 2 / 3 / 3 / 4;
+        margin-bottom: 5rem;
       }
 
       #jUECp2pCZMYFnYJI {
@@ -5345,6 +5354,7 @@
       #qlrwDKAywdn6jJKV {
         position: relative;
         grid-area: 2 / 2 / 3 / 7;
+        margin-bottom: 5rem;
       }
 
       #Xk2URltwoRlVKIbO {
