--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,3 +9,7 @@
 @using AKarateFelgueiras
 @using AKarateFelgueiras.Shared
 @using MudBlazor
+
+@* For JS Interop *@
+@inject IJSRuntime JSRuntime
+@inject NavigationManager NavigationManager
