[AKF] - Update NavMenu

--- a/Shared/CustomLayout.razor
+++ b/Shared/CustomLayout.razor
@@ -1,7 +1,7 @@
 @inherits LayoutComponentBase
-@using MudBlazor.Services
 
 <ErrorBoundary>
-    @* <NavMenu /> *@
+    <MudPopoverProvider />
+    <CustomNavMenu />
     @Body
 </ErrorBoundary>
