--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,6 +9,7 @@
 @using AKarateFelgueiras
 @using AKarateFelgueiras.Shared
 @using MudBlazor
+@using MudBlazor.Services
 
 @* For JS Interop *@
 @inject IJSRuntime JSRuntime
